--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,8 @@ jobs:
       with:
         go-version: 1.20
 
+    - name: Install dependencies
+      run: go get .
+
     - name: Test
       run: go test -v ./...
