--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,24 +2,24 @@ name: Test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ master ]
 
 jobs:
 
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v2
       with:
         go-version: 1.20
 
-    - name: Install dependencies
-      run: go get .
+    - name: Build
+      run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
